# docs/openapi.json
@@ -89,8 +89,8 @@
               }
             }
           },
-          "404": {
-            "description": "Plato no encontrado",
+          "400": {
+            "description": "Solicitud inválida",
             "content": {
               "*/*": {
                 "schema": {
@@ -98,6 +98,9 @@
                 }
               }
             }
+          },
+          "404": {
+            "description": "Plato no encontrado"
           }
         }
       },
